--- a/video3/index.html
+++ b/video3/index.html
@@ -9,14 +9,30 @@
 
 <body>
     <main>
-        <h1>
-           {{ mensaje }}
-        </h1>
+        <!--
+        <ul>
+            <li v-for="dia in laborales">{{dia}}</li>
+        </ul>
+        -->
+        <!--
+        <ul>
+            <li v-for="(tarea,index) in tareas">
+               {{index}} {{tarea.nombre}}
+                <small>({{tarea.prioridad}})</small>
+            </li>
+        </ul>
+        -->
 
-        <input type="text" v-model="mensaje">
+        <ul>
+            <li v-for="(value,key,index) in persona">
+                {{index}} - {{key}}: {{value}}
+            </li>
+        </ul>
         <pre>{{$data}}</pre>
-        <script src="https://unpkg.com/vue@2.6.11/dist/vue.js"></script>
-        <script src="main.js"></script>
+    </main>
+
+    <script src="https://unpkg.com/vue@2.6.11/dist/vue.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
